--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,4 +1,9 @@
 @import url("~bootstrap/css/bootstrap.min.css");
+@import url("https://fonts.bunny.net/css?family=Nunito");
+
+@import "variables";
+
+@import "bootstrap/scss/bootstrap";
 
 @import "bootstrap-icons/font/bootstrap-icons.css";
 @import "datatables.net-bs5/css/dataTables.bootstrap5.min.css";
